# fastapi-react-movies

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: release-drafter.yml
.github/workflows/: backend-lint.yml  backend-test.yml  deploy.yml  frontend-lint.yml  frontend-test.yml  release.yml
backend/db/: logging.yaml
backend/movies_backend/: .coveragerc  .dockerignore  .envrc  .flake8  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/movies_backend/movies_backend/: __init__.py  config.py  crud.py  database.py  exceptions.py  main.py  models.py  rebuild.py  relink.py  schemas.py  util.py
backend/movies_backend/movies_backend/routes/: __init__.py  actors.py  categories.py  movie_actor.py  movie_category.py  movies.py  root.py  series.py  studios.py
backend/movies_backend/tests/: __init__.py  test_config.py  test_crud.py  test_package.py  test_routes_actors.py  test_routes_categories.py  test_routes_movies.py  test_routes_series.py  test_routes_studios.py  test_util.py
backend/movies_backend/tests/data/: init.sql
frontend/movies_frontend/: .dockerignore  .markuplintrc  .prettierignore  .stylelintrc.json  Dockerfile  LICENSE  README.md  eslint.config.js  jest.config.ts  jest.setup.ts  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.setup.ts
frontend/movies_frontend/.husky/: pre-commit  pre-push
frontend/movies_frontend/coverage/: coverage-summary.json  lcov.info
frontend/movies_frontend/coverage/lcov-report/: index.html
frontend/movies_frontend/src/: App.tsx  index.css  main.tsx  test-utils.tsx  vite-env.d.ts
frontend/movies_frontend/src/components/: ActorSelector.tsx  ActorSelectorList.tsx  CategorySelector.tsx  Container.tsx  Loading.tsx  MovieDataForm.tsx  MovieDataFormRow.tsx  MovieImportButton.tsx  MovieList.tsx  MoviePropertyForm.tsx  MoviePropertyFormSelector.tsx  MovieSection.tsx  NavBar.tsx  NavLink.tsx  Wrapper.tsx
frontend/movies_frontend/src/mocks/: defaults.ts  handlers.ts
frontend/movies_frontend/src/pages/: AdminPage.tsx  MainPage.tsx
frontend/movies_frontend/src/state/: MovieManagerApi.ts  (+5 more)
(+36 files in other folders)
