[tool.poetry]
name = "movies-backend"
version = "1.0.73"
description = ""
authors = ["Vadim Titov <vadim.titov.hh@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pyyaml = "^6.0.3"
sqlalchemy = "^2.0.45"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
commitizen = "^4.11.3"
isort = "^7.0.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"
pylint = "^4.0.4"
black = "^25.12.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-local-badge = "^1.0.3"
httpx = "^0.28.1"
create-license = "^2.1.1"
pytest-mock = "^3.14.0"
types-pyyaml = "^6.0.12.20250402"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[tool.black]
preview = true
line-length = 79
enable-unstable-feature = ["string_processing", "multiline_string_handling"]
